[perf] Performance improvements for DynReconf processing